# pokemon

./: Dockerfile  README.md
pokemon_core/: Cargo.toml
pokemon_core/src/: ability_description.rs  ability_urls.rs  json_request.rs  lib.rs  shakespearean_translation_request.rs  species_description_request.rs  species_url_request.rs
pokemon_core/tests/: integration_test.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/tests/: integration_test.rs
