[package]
name = "pokemon_core"
version = "0.1.0"
authors = ["Attila Kun"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
async-trait = "0.1.48"
actix-web = { version = "3.3.2", features = ["openssl"] }
url = "2.2.1"
regex = "1.4.5"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"