[package]
name = "server"
version = "0.1.0"
authors = ["Attila Kun"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "1.1.1"
pokemon_core = { path = "../pokemon_core" }
serde = { version = "1.0.123", features = ["derive"] }